Add command-line instructions to build the project. Currently these are an ugly mix of Windows and Cygwin commands, but they seem to work. To be improved!